complete project list

--- a/client_project_Details.html
+++ b/client_project_Details.html
@@ -38,11 +38,11 @@
                
                 <!-- setup dropdown menu start  -->
                 <div id="Setup">
-                    <a class="nav-link" id="setup-link">
+                    <a class="nav-link active_Link" id="setup-link">
                         <div class="link-icon">
                             <img src="assets/Shape.svg" alt="" class="sidebar-icon-image"
                                 id="active-sidebar-icon-image">
-                            <span class="sidebar-link-text ml-2">
+                            <span class="sidebar-link-text ml-2" id="setup-link-text">
                                 Setup
                             </span>
                             <span class="report-icon"><img src="assets/icon22.png" alt=""></span>
@@ -50,7 +50,7 @@
                     </a>
                 </div>
                 <div class="setup-menu">
-                    <a class="nav-link nav-sidevar-link" href="FTP_LIST.html" id="setup-menu-link">
+                    <a class="nav-link nav-sidevar-link" href="#" id="setup-menu-link">
                         <div class="link-icon ml-3">
                             <span class="sidebar-link-text ml-2" id="setup-link-text"> FTP List</span>
                         </div>
@@ -79,49 +79,49 @@
                    
                 </div>
                 <!-- setup dropdown menu end  -->
-                <a class="nav-link nav-sidevar-link" href="index.html">
+                <a class="nav-link nav-sidevar-link" href="#">
                     <div class="link-icon">
                         <img src="assets/Shape.svg" alt="" class="sidebar-icon-image">
                         <span class="sidebar-link-text ml-2"> Client List</span>
                     </div>
                 </a>
-                <a class="nav-link nav-sidevar-link" href="index.html">
+                <a class="nav-link nav-sidevar-link" href="#">
                     <div class="link-icon">
                         <img src="assets/Shape.svg" alt="" class="sidebar-icon-image">
                         <span class="sidebar-link-text ml-2">Upload File</span>
                     </div>
                 </a>
-                <a class="nav-link nav-sidevar-link" href="index.html">
+                <a class="nav-link nav-sidevar-link" href="#">
                     <div class="link-icon">
                         <img src="assets/Shape.svg" alt="" class="sidebar-icon-image">
                         <span class="sidebar-link-text ml-2">Upload Image</span>
                     </div>
                 </a>
-                <a class="nav-link nav-sidevar-link" href="index.html">
+                <a class="nav-link nav-sidevar-link" href="#">
                     <div class="link-icon">
                         <img src="assets/Shape.svg" alt="" class="sidebar-icon-image">
                         <span class="sidebar-link-text ml-2">Project List</span>
                     </div>
                 </a>
-                <a class="nav-link nav-sidevar-link" href="index.html">
+                <a class="nav-link nav-sidevar-link" href="#">
                     <div class="link-icon">
                         <img src="assets/Shape.svg" alt="" class="sidebar-icon-image">
                         <span class="sidebar-link-text ml-2">Project Billing Quantity</span>
                     </div>
                 </a>
-                <a class="nav-link nav-sidevar-link" href="index.html">
+                <a class="nav-link nav-sidevar-link" href="#">
                     <div class="link-icon">
                         <img src="assets/Shape.svg" alt="" class="sidebar-icon-image">
                         <span class="sidebar-link-text ml-2">Payment For Approval</span>
                     </div>
                 </a>
-                <a class="nav-link nav-sidevar-link" href="index.html">
+                <a class="nav-link nav-sidevar-link" href="#">
                     <div class="link-icon">
                         <img src="assets/Shape.svg" alt="" class="sidebar-icon-image">
                         <span class="sidebar-link-text ml-2">Project For Invoice</span>
                     </div>
                 </a>
-                <a class="nav-link nav-sidevar-link" href="index.html">
+                <a class="nav-link nav-sidevar-link" href="#">
                     <div class="link-icon">
                         <img src="assets/Shape.svg" alt="" class="sidebar-icon-image">
                         <span class="sidebar-link-text ml-2">Invoice List</span>
@@ -130,11 +130,11 @@
   
                 <!-- report dropdown memu start  -->
                 <div id="report">
-                    <a class="nav-link" id="report-link">
+                    <a class="nav-link active_Link" id="report-link">
                         <div class="link-icon">
                             <img src="assets/Shape.svg" alt="" class="sidebar-icon-image"
                                 id="active-sidebar-icon-image">
-                            <samp class="sidebar-link-text ml-2">
+                            <samp class="sidebar-link-text ml-2" id="setup-link-text">
                                 Report
                             </samp>
                             <span class="report-icon"><img src="assets/icon22.png" alt=""></span>
