--- a/index.html
+++ b/index.html
@@ -29,40 +29,42 @@
                     </div>
                 </a>
                 <hr class="solid-divider">
+               
                 <a class="nav-link nav-sidevar-link mt-3" href="index.html">
                     <div class="link-icon">
                         <img src="assets/Shape.svg" alt="" class="sidebar-icon-image">
-                        <span class="sidebar-link-text ms-1 "> Dashboard</span>
+                        <span class="sidebar-link-text ml-2 "> Dashboard</span>
                     </div>
                 </a>
-                <a class="nav-link nav-sidevar-link" href="index.html">
+                <a class="nav-link nav-sidevar-link" href="#">
                     <div class="link-icon">
                         <img src="assets/Shape.svg" alt="" class="sidebar-icon-image">
-                        <span class="sidebar-link-text ms-1"> Assign Details</span>
+                        <span class="sidebar-link-text ml-2"> Assign Details</span>
                     </div>
                 </a>
-                <a class="nav-link nav-sidevar-link" href="index.html">
+                <a class="nav-link nav-sidevar-link" href="#">
                     <div class="link-icon">
                         <img src="assets/Shape.svg" alt="" class="sidebar-icon-image">
-                        <span class="sidebar-link-text ms-1"> Damage Image</span>
+                        <span class="sidebar-link-text ml-2"> Damage Image</span>
                     </div>
                 </a>
-                <a class="nav-link nav-sidevar-link" href="index.html">
+                <a class="nav-link nav-sidevar-link" href="#">
                     <div class="link-icon">
                         <img src="assets/Shape.svg" alt="" class="sidebar-icon-image">
-                        <span class="sidebar-link-text ms-1"> Checked By Projects</span>
+                        <span class="sidebar-link-text ml-2">Checked By Projects</span>
                     </div>
                 </a>
-                <a class="nav-link nav-sidevar-link" href="index.html">
+              
+                <a class="nav-link nav-sidevar-link" href="#">
                     <div class="link-icon">
                         <img src="assets/Shape.svg" alt="" class="sidebar-icon-image">
-                        <span class="sidebar-link-text ms-1"> QC Projects</span>
+                        <span class="sidebar-link-text ml-2"> QC Projects</span>
                     </div>
                 </a>
-                <a class="nav-link nav-sidevar-link" href="index.html">
+                <a class="nav-link nav-sidevar-link" href="#">
                     <div class="link-icon">
                         <img src="assets/Shape.svg" alt="" class="sidebar-icon-image">
-                        <span class="sidebar-link-text ms-1"> Final Check Projects</span>
+                        <span class="sidebar-link-text ml-2"> Final Check Projects</span>
                     </div>
                 </a>
             </div>
