--- a/manager-deshboard.html
+++ b/manager-deshboard.html
@@ -37,42 +37,37 @@
                         <span class="sidebar-link-text ml-1 "> Dashboard</span>
                     </div>
                 </a>
-                <a class="nav-link nav-sidevar-link" href="index.html">
+                <a class="nav-link nav-sidevar-link" href="#">
                     <div class="link-icon">
                         <img src="assets/Shape.svg" alt="" class="sidebar-icon-image">
                         <span class="sidebar-link-text ml-1">Projects</span>
                     </div>
                 </a>
-                <a class="nav-link nav-sidevar-link" href="index.html">
+                <a class="nav-link nav-sidevar-link" href="#">
                     <div class="link-icon">
                         <img src="assets/Shape.svg" alt="" class="sidebar-icon-image">
                         <span class="sidebar-link-text ml-1">Assign Details</span>
                     </div>
                 </a>
-                <a class="nav-link nav-sidevar-link" href="index.html">
+                <a class="nav-link nav-sidevar-link" href="#">
                     <div class="link-icon">
                         <img src="assets/Shape.svg" alt="" class="sidebar-icon-image">
                         <span class="sidebar-link-text ml-1"> Checked By Projects</span>
                     </div>
                 </a>
-                <a class="nav-link nav-sidevar-link" href="index.html">
+                <a class="nav-link nav-sidevar-link" href="#">
                     <div class="link-icon">
                         <img src="assets/Shape.svg" alt="" class="sidebar-icon-image">
                         <span class="sidebar-link-text ml-1">QC Projects</span>
                     </div>
                 </a>
-                <a class="nav-link nav-sidevar-link" href="index.html">
+                <a class="nav-link nav-sidevar-link" href="#">
                     <div class="link-icon">
                         <img src="assets/Shape.svg" alt="" class="sidebar-icon-image">
                         <span class="sidebar-link-text ml-1">Final Check Projects</span>
                     </div>
                 </a>
-               <!--  <a class="nav-link nav-sidevar-link" href="index.html">
-                    <div class="link-icon">
-                        <img src="assets/Shape.svg" alt="" class="sidebar-icon-image">
-                        <span class="sidebar-link-text ml-1">Penalty</span>
-                    </div>
-                </a> -->
+             
                 <div id="report">
                     <a class="nav-link nav-sidevar-link" id="report-link">
                         <div class="link-icon">
@@ -84,7 +79,6 @@
                         </div>
                     </a>
                     <div class="client-sumarry">
-                        <hr>
                         <a class="nav-link nav-sidevar-link " href="#">
                             <div class="link-icon">
                                 <span class="sidebar-link-text" id="Client_Summary_text">Pending Penalty</span>
