--- a/Favorite_Number.html
+++ b/Favorite_Number.html
@@ -8,6 +8,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/setup.css">
+    <link rel="stylesheet" href="css/Favorite_Number.css">
     <link rel="stylesheet" href="css/client_project_Details.css">
     <link rel="stylesheet" href="https://cdn.usebootstrap.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
@@ -23,7 +24,7 @@
         <!-- sidebar section start -->
         <section class="sidebar-content">
             <div class="mx-3">
-                <a class="nav-link" href="#">
+                <a class="nav-link" href="index.html">
                     <div class="top-link-icon">
                         <img src="assets/image 1.svg" alt="" class="sidebar-icon-image">
                         <span class="ms-1"> Offshore IT</span>
@@ -61,7 +62,7 @@
                             <span class="sidebar-link-text ml-2" id="setup-link-text"> Currency</span>
                         </div>
                     </a>
-                    <a class="nav-link nav-sidevar-link" href="#" id="setup-menu-link">
+                    <a class="nav-link nav-sidevar-link" href="Favorite_Number.html" id="setup-menu-link">
                         <div class="link-icon ml-3">
                             <span class="sidebar-link-text ml-2" id="setup-link-text"> Favorite Number</span>
                         </div>
@@ -80,49 +81,49 @@
 
                 </div>
                 <!-- setup dropdown menu end  -->
-                <a class="nav-link nav-sidevar-link" href="#">
+                <a class="nav-link nav-sidevar-link" href="index.html">
                     <div class="link-icon">
                         <img src="assets/Shape.svg" alt="" class="sidebar-icon-image">
                         <span class="sidebar-link-text ml-2"> Client List</span>
                     </div>
                 </a>
-                <a class="nav-link nav-sidevar-link" href="#">
+                <a class="nav-link nav-sidevar-link" href="index.html">
                     <div class="link-icon">
                         <img src="assets/Shape.svg" alt="" class="sidebar-icon-image">
                         <span class="sidebar-link-text ml-2">Upload File</span>
                     </div>
                 </a>
-                <a class="nav-link nav-sidevar-link" href="#">
+                <a class="nav-link nav-sidevar-link" href="index.html">
                     <div class="link-icon">
                         <img src="assets/Shape.svg" alt="" class="sidebar-icon-image">
                         <span class="sidebar-link-text ml-2">Upload Image</span>
                     </div>
                 </a>
-                <a class="nav-link nav-sidevar-link" href="#">
+                <a class="nav-link nav-sidevar-link" href="index.html">
                     <div class="link-icon">
                         <img src="assets/Shape.svg" alt="" class="sidebar-icon-image">
                         <span class="sidebar-link-text ml-2">Project List</span>
                     </div>
                 </a>
-                <a class="nav-link nav-sidevar-link" href="#">
+                <a class="nav-link nav-sidevar-link" href="index.html">
                     <div class="link-icon">
                         <img src="assets/Shape.svg" alt="" class="sidebar-icon-image">
                         <span class="sidebar-link-text ml-2">Project Billing Quantity</span>
                     </div>
                 </a>
-                <a class="nav-link nav-sidevar-link" href="#">
+                <a class="nav-link nav-sidevar-link" href="index.html">
                     <div class="link-icon">
                         <img src="assets/Shape.svg" alt="" class="sidebar-icon-image">
                         <span class="sidebar-link-text ml-2">Payment For Approval</span>
                     </div>
                 </a>
-                <a class="nav-link nav-sidevar-link" href="#">
+                <a class="nav-link nav-sidevar-link" href="index.html">
                     <div class="link-icon">
                         <img src="assets/Shape.svg" alt="" class="sidebar-icon-image">
                         <span class="sidebar-link-text ml-2">Project For Invoice</span>
                     </div>
                 </a>
-                <a class="nav-link nav-sidevar-link" href="#">
+                <a class="nav-link nav-sidevar-link" href="index.html">
                     <div class="link-icon">
                         <img src="assets/Shape.svg" alt="" class="sidebar-icon-image">
                         <span class="sidebar-link-text ml-2">Invoice List</span>
@@ -267,123 +268,23 @@
             </nav>
             <!-- nan-munu end -->
 
-            <!-- slider data form start  -->
-            <div id="overlay">
-                <div id="content">
-                    <div class="d-flex justify-content-between align-items-center title">
-                        <div>Create</div>
-                        <div id="close-content">
-                            <i class="fa-solid fa-xmark close-icon"></i>
-                        </div>
-                    </div>
-                    <div class="from-content">
-                        <form>
-                            <div>
-                                <label for="">Host <span class="text-danger">*</span></label> <br>
-                                <input type="text" class="from-input" placeholder="Host" required>
-                            </div>
-                            <div class="mt-3">
-                                <label for="">User Name <span class="text-danger">*</span></label> <br>
-                                <input type="text" class="from-input" placeholder="Host" required>
-                            </div>
-                            <div class="mt-3">
-                                <label for="">Password <span class="text-danger">*</span></label> <br>
-                                <input type="password" name="" id="" class="from-input">
-                            </div>
-                            <div class="mt-3">
-                                <label for="">Users Type <span class="text-danger">*</span></label> <br>
-                                <div class="d-flex">
-                                    <div>
-                                        <input type="radio" id="Label" name="label" value="Label"
-                                            class="hide-select-client">
-                                        <label for="html">Label</label><br>
-                                    </div>
-                                    <div class="ml-3">
-                                        <input type="radio" id="Label" name="label" value="Label"
-                                            class="show-select-client">
-                                        <label for="html">Label</label><br>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="mt-3 Slelect-Client">
-                                <label for="">Slelect Client <span class="text-danger">*</span></label> <br>
-                                <input type="text" class="from-input" placeholder="Host" required>
-                            </div>
-                            <div class="mt-3">
-                                <label for="">Status <span class="text-danger">*</span></label> <br>
-                                <select name="Status" id="active" class="from-input">
-                                    <option value="Active" class="select-input">Active</option>
-                                    <option value="Inactive" class="select-input">Inactive</option>
-                                </select>
-                            </div>
 
-                        </form>
-                    </div>
-
-                </div>
+            <div>
+                <p class="fev_title">Favorite Number</p>
             </div>
-            <!-- slider data form end  -->
-
-            <!-- data table start  -->
-            <div class="mt-5 mx-4 data-table">
-                <div class="mb-3">
-                    <p>FTP List</p>
-                </div>
-                <hr>
-                <div class="Add_FTP">
-                    <button id="show-content" class="btn btn-primary ">Add New</button>
-                </div>
+            <hr class="mx-3">
 
 
-                <div class="table-parrent">
-                    <table id="example" class="display" style="width:100%">
-                        <thead>
-                            <tr>
-                                <th class="Project-table-heading">SL</th>
-                                <th class="Project-table-heading">Host</th>
-                                <th class="Project-table-heading">User Name</th>
-                                <th class="Project-table-heading">Password</th>
-                                <th class="Project-table-heading">User Type</th>
-                                <th class="Project-table-heading">Status</th>
-                                <th class="Project-table-heading text-center">Action</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <td>001</td>
-                                <td>141.223.8035</td>
-                                <td>Jena</td>
-                                <td>pbsdeUdFsc</td>
-                                <td>Specific</td>
-                                <td>Active</td>
-                                <td class="text-center">:</td>
-
-                            </tr>
-                            <tr>
-                                <td>001</td>
-                                <td>141.223.8035</td>
-                                <td>Jena</td>
-                                <td>pbsdeUdFsc</td>
-                                <td>Specific</td>
-                                <td>Active</td>
-                                <td class="text-center">:</td>
-                            </tr>
-                            <tr>
-                                <td>001</td>
-                                <td>141.223.8035</td>
-                                <td>Jena</td>
-                                <td>pbsdeUdFsc</td>
-                                <td>Specific</td>
-                                <td>Active</td>
-                                <td class="text-center">:</td>
-                            </tr>
-
-
-                        </tbody>
-                    </table>
-                </div>
+            <div class="d-flex justify-content-center">
+                <form>
+                    <label>Number <span class="text-danger">*</span></label><br>
+                    <input type="text" name="" id="" placeholder="Enter Favorite Number" class="fav_input"> <br>
+                    <button class="btn btn-primary mt-3" type="submit">Submit</button>
+                </form>
             </div>
-            <!-- data table end  -->
+
+
+
 
 
 
