--- a/projectDetails.html
+++ b/projectDetails.html
@@ -20,47 +20,59 @@
         <!-- sidebar section start -->
         <section class="sidebar-content">
             <div>
-                <a class="nav-link" href="index.html">
+                <a class="nav-link" href="#">
                     <div class="top-link-icon">
                         <img src="assets/image 1.svg" alt="" class="sidebar-icon-image">
-                        <span class="ms-1"> Offshore IT</span>
+                        <span class="ml-2"> Offshore IT</span>
                     </div>
                 </a>
                 <hr class="solid-divider">
-                <a class="nav-link nav-sidevar-link mt-3" href="index.html">
+                <a class="nav-link nav-sidevar-link mt-3" href="#">
                     <div class="link-icon">
                         <img src="assets/Shape.svg" alt="" class="sidebar-icon-image">
-                        <span class="sidebar-link-text ms-1 "> Dashboard</span>
+                        <span class="sidebar-link-text ml-2 "> Dashboard</span>
                     </div>
                 </a>
-                <a class="nav-link nav-sidevar-link" href="index.html">
+                <a class="nav-link nav-sidevar-link" href="#">
                     <div class="link-icon">
-                        <img src="assets/Shape.svg" alt="" class="sidebar-icon-image">
-                        <span class="sidebar-link-text ms-1"> Assign Details</span>
+                        <img src="assets/sidebar_icon/Shape.png" alt="" class="sidebar-icon-image">
+                        <span class="sidebar-link-text ml-2">Projects</span>
                     </div>
                 </a>
-                <a class="nav-link nav-sidevar-link" href="index.html">
+                <a class="nav-link nav-sidevar-link" href="#">
                     <div class="link-icon">
-                        <img src="assets/Shape.svg" alt="" class="sidebar-icon-image">
-                        <span class="sidebar-link-text ms-1"> Damage Image</span>
+                        <img src="assets/sidebar_icon/Shape (1).png" alt="" class="sidebar-icon-image">
+                        <span class="sidebar-link-text ml-2">Assign Details</span>
                     </div>
                 </a>
-                <a class="nav-link nav-sidevar-link" href="index.html">
+                <a class="nav-link nav-sidevar-link" href="#">
                     <div class="link-icon">
-                        <img src="assets/Shape.svg" alt="" class="sidebar-icon-image">
-                        <span class="sidebar-link-text ms-1"> Checked By Projects</span>
+                        <img src="assets/sidebar_icon/Shape (2).png" alt="" class="sidebar-icon-image">
+                        <span class="sidebar-link-text ml-2">My Work</span>
                     </div>
                 </a>
-                <a class="nav-link nav-sidevar-link" href="index.html">
+                <a class="nav-link nav-sidevar-link" href="#">
                     <div class="link-icon">
-                        <img src="assets/Shape.svg" alt="" class="sidebar-icon-image">
-                        <span class="sidebar-link-text ms-1"> QC Projects</span>
+                        <img src="assets/sidebar_icon/Shape (1).png alt="" class="sidebar-icon-image">
+                        <span class="sidebar-link-text ml-2">Checked By Projects</span>
                     </div>
                 </a>
-                <a class="nav-link nav-sidevar-link" href="index.html">
+                <a class="nav-link nav-sidevar-link" href="#">
                     <div class="link-icon">
-                        <img src="assets/Shape.svg" alt="" class="sidebar-icon-image">
-                        <span class="sidebar-link-text ms-1"> Final Check Projects</span>
+                        <img src="assets/sidebar_icon/Shape (3).png" alt="" class="sidebar-icon-image">
+                        <span class="sidebar-link-text ml-2">QC Projects</span>
+                    </div>
+                </a>
+                <a class="nav-link nav-sidevar-link" href="#">
+                    <div class="link-icon">
+                        <img src="assets/sidebar_icon/Shape (4).png" alt="" class="sidebar-icon-image">
+                        <span class="sidebar-link-text ml-2">Final Check Projects</span>
+                    </div>
+                </a>
+                <a class="nav-link nav-sidevar-link" href="#">
+                    <div class="link-icon">
+                        <img src="assets/sidebar_icon/Shape (5).png" alt="" class="sidebar-icon-image">
+                        <span class="sidebar-link-text ml-2">Penalty</span>
                     </div>
                 </a>
             </div>
