--- a/setup.html
+++ b/setup.html
@@ -23,44 +23,44 @@
                 <a class="nav-link" href="index.html">
                     <div class="top-link-icon">
                         <img src="assets/image 1.svg" alt="" class="sidebar-icon-image">
-                        <span class="ms-1"> Offshore IT</span>
+                        <span class="ml-2"> Offshore IT</span>
                     </div>
                 </a>
                 <hr class="solid-divider">
                 <a class="nav-link nav-sidevar-link mt-3" href="#">
                     <div class="link-icon">
                         <img src="assets/Shape.svg" alt="" class="sidebar-icon-image">
-                        <span class="sidebar-link-text ms-1 "> Dashboard</span>
+                        <span class="sidebar-link-text ml-2 "> Dashboard</span>
                     </div>
                 </a>
                 <a class="nav-link nav-sidevar-link" href="index.html">
                     <div class="link-icon">
                         <img src="assets/Shape.svg" alt="" class="sidebar-icon-image">
-                        <span class="sidebar-link-text ms-1"> Assign Details</span>
+                        <span class="sidebar-link-text ml-2"> Assign Details</span>
                     </div>
                 </a>
                 <a class="nav-link nav-sidevar-link" href="index.html">
                     <div class="link-icon">
                         <img src="assets/Shape.svg" alt="" class="sidebar-icon-image">
-                        <span class="sidebar-link-text ms-1"> Damage Image</span>
+                        <span class="sidebar-link-text ml-2"> Damage Image</span>
                     </div>
                 </a>
                 <a class="nav-link nav-sidevar-link" href="index.html">
                     <div class="link-icon">
                         <img src="assets/Shape.svg" alt="" class="sidebar-icon-image">
-                        <span class="sidebar-link-text ms-1"> Checked By Projects</span>
+                        <span class="sidebar-link-text ml-2"> Checked By Projects</span>
                     </div>
                 </a>
                 <a class="nav-link nav-sidevar-link" href="index.html">
                     <div class="link-icon">
                         <img src="assets/Shape.svg" alt="" class="sidebar-icon-image">
-                        <span class="sidebar-link-text ms-1"> QC Projects</span>
+                        <span class="sidebar-link-text ml-2"> QC Projects</span>
                     </div>
                 </a>
                 <a class="nav-link nav-sidevar-link" href="index.html">
                     <div class="link-icon">
                         <img src="assets/Shape.svg" alt="" class="sidebar-icon-image">
-                        <span class="sidebar-link-text ms-1"> Final Check Projects</span>
+                        <span class="sidebar-link-text ml-2"> Final Check Projects</span>
                     </div>
                 </a>
             </div>
