complete client Dashboard

--- a/client_project_Details.html
+++ b/client_project_Details.html
@@ -21,7 +21,7 @@
     <main id="main-content">
         <!-- sidebar section start -->
         <section class="sidebar-content">
-            <div class="mx-3">
+            <div class="mx-3 side_nav">
                 <a class="nav-link" href="index.html">
                     <div class="top-link-icon">
                         <img src="assets/image 1.svg" alt="" class="sidebar-icon-image">
@@ -40,9 +40,8 @@
                 <div id="Setup">
                     <a class="nav-link active_Link" id="setup-link">
                         <div class="link-icon">
-                            <img src="assets/Shape.svg" alt="" class="sidebar-icon-image"
-                                id="active-sidebar-icon-image">
-                            <span class="sidebar-link-text ml-2" id="setup-link-text">
+                            <img src="assets/Shape.svg" alt="" class="sidebar-icon-image">
+                            <span class="ml-2" id="setup-link-text">
                                 Setup
                             </span>
                             <span class="report-icon"><img src="assets/icon22.png" alt=""></span>
@@ -130,11 +129,10 @@
   
                 <!-- report dropdown memu start  -->
                 <div id="report">
-                    <a class="nav-link active_Link" id="report-link">
+                    <a class="nav-link" id="report-link">
                         <div class="link-icon">
-                            <img src="assets/Shape.svg" alt="" class="sidebar-icon-image"
-                                id="active-sidebar-icon-image">
-                            <samp class="sidebar-link-text ml-2" id="setup-link-text">
+                            <img src="assets/Shape.svg" alt="" class="sidebar-icon-image">
+                            <samp class=" ml-2" id="setup-link-text">
                                 Report
                             </samp>
                             <span class="report-icon"><img src="assets/icon22.png" alt=""></span>
