--- a/Favorite_Number.html
+++ b/Favorite_Number.html
@@ -23,7 +23,7 @@
     <main id="main-content">
         <!-- sidebar section start -->
         <section class="sidebar-content">
-            <div class="mx-3">
+            <div class="mx-3 side_nav">
                 <a class="nav-link" href="index.html">
                     <div class="top-link-icon">
                         <img src="assets/image 1.svg" alt="" class="sidebar-icon-image">
@@ -40,11 +40,10 @@
 
                 <!-- setup dropdown menu start  -->
                 <div id="Setup">
-                    <a class="nav-link" id="setup-link">
+                    <a class="nav-link active_Link" id="setup-link">
                         <div class="link-icon">
-                            <img src="assets/Shape.svg" alt="" class="sidebar-icon-image"
-                                id="active-sidebar-icon-image">
-                            <span class="sidebar-link-text ml-2">
+                            <img src="assets/Shape.svg" alt="" class="sidebar-icon-image">
+                            <span class="ml-2" id="setup-link-text">
                                 Setup
                             </span>
                             <span class="report-icon"><img src="assets/icon22.png" alt=""></span>
@@ -62,7 +61,7 @@
                             <span class="sidebar-link-text ml-2" id="setup-link-text"> Currency</span>
                         </div>
                     </a>
-                    <a class="nav-link nav-sidevar-link" href="Favorite_Number.html" id="setup-menu-link">
+                    <a class="nav-link nav-sidevar-link" href="#" id="setup-menu-link">
                         <div class="link-icon ml-3">
                             <span class="sidebar-link-text ml-2" id="setup-link-text"> Favorite Number</span>
                         </div>
@@ -81,49 +80,49 @@
 
                 </div>
                 <!-- setup dropdown menu end  -->
-                <a class="nav-link nav-sidevar-link" href="index.html">
+                <a class="nav-link nav-sidevar-link" href="#">
                     <div class="link-icon">
                         <img src="assets/Shape.svg" alt="" class="sidebar-icon-image">
                         <span class="sidebar-link-text ml-2"> Client List</span>
                     </div>
                 </a>
-                <a class="nav-link nav-sidevar-link" href="index.html">
+                <a class="nav-link nav-sidevar-link" href="#">
                     <div class="link-icon">
                         <img src="assets/Shape.svg" alt="" class="sidebar-icon-image">
                         <span class="sidebar-link-text ml-2">Upload File</span>
                     </div>
                 </a>
-                <a class="nav-link nav-sidevar-link" href="index.html">
+                <a class="nav-link nav-sidevar-link" href="#">
                     <div class="link-icon">
                         <img src="assets/Shape.svg" alt="" class="sidebar-icon-image">
                         <span class="sidebar-link-text ml-2">Upload Image</span>
                     </div>
                 </a>
-                <a class="nav-link nav-sidevar-link" href="index.html">
+                <a class="nav-link nav-sidevar-link" href="#">
                     <div class="link-icon">
                         <img src="assets/Shape.svg" alt="" class="sidebar-icon-image">
                         <span class="sidebar-link-text ml-2">Project List</span>
                     </div>
                 </a>
-                <a class="nav-link nav-sidevar-link" href="index.html">
+                <a class="nav-link nav-sidevar-link" href="#">
                     <div class="link-icon">
                         <img src="assets/Shape.svg" alt="" class="sidebar-icon-image">
                         <span class="sidebar-link-text ml-2">Project Billing Quantity</span>
                     </div>
                 </a>
-                <a class="nav-link nav-sidevar-link" href="index.html">
+                <a class="nav-link nav-sidevar-link" href="#">
                     <div class="link-icon">
                         <img src="assets/Shape.svg" alt="" class="sidebar-icon-image">
                         <span class="sidebar-link-text ml-2">Payment For Approval</span>
                     </div>
                 </a>
-                <a class="nav-link nav-sidevar-link" href="index.html">
+                <a class="nav-link nav-sidevar-link" href="#">
                     <div class="link-icon">
                         <img src="assets/Shape.svg" alt="" class="sidebar-icon-image">
                         <span class="sidebar-link-text ml-2">Project For Invoice</span>
                     </div>
                 </a>
-                <a class="nav-link nav-sidevar-link" href="index.html">
+                <a class="nav-link nav-sidevar-link" href="#">
                     <div class="link-icon">
                         <img src="assets/Shape.svg" alt="" class="sidebar-icon-image">
                         <span class="sidebar-link-text ml-2">Invoice List</span>
@@ -134,14 +133,14 @@
                 <div id="report">
                     <a class="nav-link" id="report-link">
                         <div class="link-icon">
-                            <img src="assets/Shape.svg" alt="" class="sidebar-icon-image"
-                                id="active-sidebar-icon-image">
-                            <span class="sidebar-link-text ml-2">
-                                Setup
-                            </span>
+                            <img src="assets/Shape.svg" alt="" class="sidebar-icon-image">
+                            <samp class=" ml-2" id="setup-link-text">
+                                Report
+                            </samp>
                             <span class="report-icon"><img src="assets/icon22.png" alt=""></span>
                         </div>
                     </a>
+
                 </div>
                 <div class="client-sumarry">
                     <a class="nav-link nav-sidevar-link" href="#" id="setup-menu-link">
@@ -282,14 +281,6 @@
                     <button class="btn btn-primary mt-3" type="submit">Submit</button>
                 </form>
             </div>
-
-
-
-
-
-
-
-
 
         </section>
     </main>
